--- a/package.json
+++ b/package.json
@@ -11,29 +11,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.2.5",
+    "@angular/cdk": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.5",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/router": "^15.2.9",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@googlemaps/js-api-loader": "^1.15.1",
+    "@microsoft/signalr": "^7.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "googleapis": "^118.0.0",
     "lz-string": "^1.5.0",
     "ng2-img-max": "^2.2.8",
     "ngx-image-compress": "^13.1.16",
+    "ngx-spinner": "^15.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular-devkit/build-angular": "^15.2.0",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
     "@types/google.maps": "^3.52.4",
